# qzx

./: .gitignore  README.md  SAM2UNet_dblock_dat_fused_rfbhou.py  SAM2UNet融合DarkIR与ParameterNet稳健版设计文档.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_all.txt  setup.cfg  两个Python文件与三篇论文关系分析.md
configs/: cod_sources.json  cod_train.json  polyp_sources.json  polyp_train.json
docs/: README.md  deep-research-report.md  paper-draft.md
docs/analysis/: 两个Python文件与三篇论文关系分析.md
docs/design/: SAM2UNet融合DarkIR与ParameterNet稳健版设计文档.md
docs/superpowers/plans/: 2026-06-14-polyp-dataset-training.md  2026-06-14-polyp-training-evaluation.md  2026-06-14-project-structure-reorganization.md  2026-06-14-root-main-entry.md  2026-06-14-sam2unet-darkir-parameternet.md  2026-06-22-cod-training-integration.md  2026-06-22-dataset-completion.md
docs/superpowers/specs/: 2026-06-14-polyp-dataset-training-design.md  2026-06-14-polyp-training-evaluation-design.md  2026-06-14-root-main-entry-design.md  2026-06-22-cod-training-integration-design.md  2026-06-22-dataset-completion-design.md
docs/word/: paper-draft.docx
scripts/: download_polyp_data.ps1  prepare_local_polyp_data.ps1
src/sam2unet/: __init__.py  baseline.py  cod_dataset.py  data.py  experiment.py  experimental_darkir.py  fusion.py  monitor.py  polyp_dataset.py  runtime.py  training.py
tests/: test_cod_config.py  test_cod_dataset.py  test_darkir_parameternet_blocks.py  test_experiment_cli.py  test_main.py  test_polyp_data.py  test_polyp_training.py  test_sam2_runtime.py  test_sam2unet_fusion.py
