[metadata]
name = sam2unet-fusion
version = 0.1.0
description = SAM2-UNet variants with DarkIR and ParameterNet-inspired feature bridges
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    torch>=2.1
    torchvision>=0.16
    numpy>=1.24.4
    tqdm>=4.66.1
    hydra-core>=1.3.2
    iopath>=0.1.10
    pillow>=9.4.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=7.0
